--- a/ProniaOnion/src/Core/ProniaOnion.Application/ProniaOnion.Application.csproj
+++ b/ProniaOnion/src/Core/ProniaOnion.Application/ProniaOnion.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstractions\Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProniaOnion.Domain\ProniaOnion.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
